# swigHAPI

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindHAPI.cmake  macroUtils.cmake
src/: CMakeLists.txt  swigHAPI.i
src/csharp/: CMakeLists.txt
src/interfaces/: AnyHapticsDevice.i  CollisionObjects.i  FrictionSurface.i  HAPI.i  HAPIForceEffect.i  HAPIHapticObject.i  HAPIHapticShape.i  HAPIHapticsDevice.i  HAPIHapticsRenderer.i  HAPISurfaceObject.i  HAPITypes.i  HapticPrimitive.i  PlaneConstraint.i  TemplateVector.i  typemap_hapi.i
src/interfaces/HAPITypes/: Mat3.i  Mat4.i  Quat.i  Rot.i  Vec2.i  Vec3.i  Vec4.i  linalgMacro.i
src/interfaces/modified/: HAPIForceEffect.h  HAPIHapticsDevice.h  HAPIHapticsRenderer.h  HAPISurfaceObject.h  HapticPrimitive.h  PlaneConstraint.h
src/interfaces/modified/backup/: HAPIHapticsDevice.h
src/python/: CMakeLists.txt
src/unity/: CMakeLists.txt  createUnitySources.py
src/unity/unity/csHAPI/Mesh/: simplifiedFalcon.blend
test/cs/: test_swigHAPI.sln  test_swigHAPI.userprefs
test/cs/test_HAPITypes/: AssemblyInfo.cs  Main.cs  MiscellaneousExamples.cs  TestAnyHapticsDevice.cs  TestForceEffect.cs  TestGenericVectors.cs  TestGeometryPrimitive.cs  TestMat3.cs  TestMat4.cs  TestQuat.cs  TestRot.cs  TestVec2.cs  TestVec3.cs  TestVec4.cs  test_HAPITypes.csproj
test/cs/unittest/: DummyTestCase.cs  TestCase.cs  TestReport.cs  unittest.csproj
test/python/: runAllTest.py  tLineraAlgebra.py  test00.py  test01.py  test02.py
