
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${HAPI_INCLUDE_DIRS})
set(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/cs)

SET_SOURCE_FILES_PROPERTIES(../swigHAPI.i PROPERTIES SWIG_FLAGS "-DWIN32;-DNDEBUG;-namespace;HAPI;")
SET_SOURCE_FILES_PROPERTIES(../swigHAPI.i PROPERTIES CPLUSPLUS ON)

FILE(GLOB    SWIG_MODULE_csHAPI_EXTRA_DEPS      ../interfaces/*.i   ../interfaces/modified/*.h   ../interfaces/HAPITypes/*.i)
SWIG_ADD_MODULE(csHAPI csharp ../swigHAPI.i)
SWIG_LINK_LIBRARIES(csHAPI "${HAPI_LIBRARIES}")

set_target_properties( csHAPI   PROPERTIES   LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/cs")

