
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(PythonLibs)

LINK_DIRECTORIES(${PYTHON_LIBRARY_PATH})
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${HAPI_INCLUDE_DIRS})
set(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/py)

SET_SOURCE_FILES_PROPERTIES(../swigHAPI.i PROPERTIES SWIG_FLAGS "-DWIN32;-DNDEBUG;")
SET_SOURCE_FILES_PROPERTIES(../swigHAPI.i PROPERTIES CPLUSPLUS ON)

FILE(GLOB    SWIG_MODULE_pyHAPI_EXTRA_DEPS      ../interfaces/*.i  ../interfaces/modified/*.h   ../interfaces/HAPITypes/*.i)

IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 3.7)
    SWIG_ADD_LIBRARY(pyHAPI LANGUAGE  python SOURCES ../swigHAPI.i)
ELSE()
    SWIG_ADD_MODULE(pyHAPI python ../swigHAPI.i)
ENDIF()
SWIG_LINK_LIBRARIES(pyHAPI "${HAPI_LIBRARIES}" ${PYTHON_LIBRARY})


set_target_properties( _pyHAPI   PROPERTIES   LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/py")


